# robot_interfaces

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile.in  README.md  doc_mainpage.rst  package.xml  readme.md  setup.py
.github/workflows/: format.yml
cmake/: FindPylon.cmake  find_boost_components.cmake
demos/: CMakeLists.txt  demo.cpp  demo_camera.py  demo_infinite_wait.cpp  demo_multiprocess_backend.cpp  demo_multiprocess_frontend.cpp  demo_pylon.py  demo_tricamera.py  types.hpp
doc/: 00_mainpage.rst  about_architecture.rst  breathing_cat.toml  custom_driver.rst  custom_sensor.rst  desired_vs_applied_action.md  desired_vs_applied_action.rst  installation.md  installation.rst  preempt_rt_kernel.rst  quick_start_example.rst  real_time.rst  robot_data.rst  timeseries.rst
docs/: custom_driver.md  index.md  installation.md  quick_start_example.md  robot_data.md  timeseries.md
include/robot_interfaces/: .finger.hpp.swo  .finger.hpp.swp  camera_backend.hpp  camera_data.hpp  camera_data_types.hpp  camera_driver.hpp  camera_frontend.hpp  cereal_eigen.hpp  disentanglement_platform.hpp  example.hpp  finger.hpp  finger_logger.hpp  finger_observation.hpp  finger_types.hpp  global_signal_handler.hpp  loggable.hpp  logger.hpp  monitored_robot_driver.hpp  n_finger_observation.hpp  n_joint_action.hpp  n_joint_observation.hpp  n_joint_robot_functions.hpp  n_joint_robot_types.hpp  one_joint_types.hpp  opencv_driver.hpp  pybind_camera.hpp  pybind_finger.hpp  pybind_helper.hpp  pybind_sensors.hpp  robot.hpp  robot_backend.hpp  robot_data.hpp  robot_driver.hpp  robot_frontend.hpp  robot_log_entry.hpp  robot_log_reader.hpp  robot_logger.hpp  sensor_backend.hpp  sensor_data.hpp  sensor_data_types.hpp  (+7 more)
include/robot_interfaces/sensors/: camera_observation.hpp  opencv_driver.hpp  pybind_sensors.hpp  pylon_driver.hpp  sensor_backend.hpp  sensor_data.hpp  sensor_driver.hpp  sensor_frontend.hpp  sensor_log_reader.hpp  sensor_logger.hpp  sync_driver.hpp  tricamera_driver.hpp  tricamera_observation.hpp  tripylon_driver.hpp
python/robot_interfaces/: __init__.py
scripts/: plot_trifinger_log.py
src/: CMakeLists.txt  convert_old_robot_log.cpp  global_signal_handler.cpp
src/robot_interfaces/: __init__.py
srcpy/: py_camera_types.cpp  py_finger.cpp  py_finger_types.cpp  py_generic.cpp  py_one_joint_types.cpp  py_pylon_types.cpp  py_solo_eight_types.cpp  py_tricamera_types.cpp  py_trifinger_types.cpp  py_two_joint_types.cpp
tests/: CMakeLists.txt  dummy_sensor_driver.hpp  main.cpp  test_linear_dynamics.cpp  test_process_action.cpp  test_pybind_pickle.py  test_robot_backend.cpp  test_robot_logger.cpp  test_sensor_interface.cpp  test_sensor_logger.cpp
