<?xml version="1.0"?>
<package>
  <name>robot_interfaces</name>
  <version>1.0.0</version>
  <description>
	This package provides C++ interfaces (purely virtual classes) for different robots. The idea is to use this interface both for the real robots as well as the simulators.
  </description>
  <author email="manuel.wuthrich@gmail.com">Manuel Wuthrich</author>
  <maintainer email="manuel.wuthrich@gmail.com">Manuel Wuthrich</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend> mpi_cmake_modules </build_depend>
  <run_depend>   mpi_cmake_modules </run_depend>

  <build_depend> real_time_tools </build_depend>
  <run_depend>   real_time_tools </run_depend>

</package>
