<?xml version="1.0"?>
<package format="2">
  <name>robot_interfaces</name>
  <version>1.0.0</version>
  <description>
    This package provides C++ interfaces (purely virtual classes) for different robots. The idea is to use this interface both for the real robots as well as the simulators.
  </description>
  <author email="manuel.wuthrich@gmail.com">Manuel Wuthrich</author>
  <maintainer email="manuel.wuthrich@gmail.com">Manuel Wuthrich</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>mpi_cmake_modules</depend>
  <depend>real_time_tools</depend>
  <depend>pybind11_catkin</depend>
  <depend>time_series</depend>
  <depend>signal_handler</depend>
  <depend>serialization_utils</depend>

</package>
